--- a/style.css
+++ b/style.css
@@ -4,15 +4,11 @@
 }
 body{
     height: 100vh;
-    width: 100%;
-    /* background: url(./images/background.webp); */
-    /* background-size: cover;
+    width: 100vw;
+    background: url(./images/background.webp);
+    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat; */
-}
-canvas{
-    height: 100%;
-    width: 100%;
+    background-repeat: no-repeat;
 }
 .earth{
     position: absolute;
@@ -22,6 +18,7 @@ canvas{
     width: 160px;
     transform: translate(-50%,-50%);
     border-radius: 50%;
+    z-index: -1;
 }
 #earth_weapon::before{
     position: absolute;
@@ -44,6 +41,7 @@ canvas{
     height: 100%;
     width: 100%;
 }
+/* it will add blast animation  */
 .blast::before{
     position: absolute;
     content: '';
