--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 .earth{
     position: absolute;
@@ -19,6 +20,12 @@ body{
     transform: translate(-50%,-50%);
     border-radius: 50%;
     z-index: -1;
+}
+.unselectable{
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */ 
 }
 #earth_weapon::before{
     position: absolute;
@@ -36,6 +43,7 @@ body{
     top: 0;
     left: 0;
     height: 200px;
+    z-index: 1;
 }
 .astroid img{
     height: 100%;
@@ -50,4 +58,27 @@ body{
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
+}
+.bullet{
+    position: absolute;
+    width: 120px;
+    transform-origin: left;
+    z-index: -1;
+    animation: fire 1s linear 0s 1 forwards;
+}
+.bullet::before{
+    position: absolute;
+    content: "";
+    height: 4px;
+    width: 45px;
+    right: 0%;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: inset 0 0 3px #0388f4,
+                0 0 10px 5px #0026ff;
+}
+@keyframes fire {
+    100%{
+        width: 100%;
+    }
 }
